kubernetes-deployments/meetingAppSetup.yaml
---
# create the application namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ms-demo
  labels:
    name: ms-demo
