kubernetes-deployments/meetingApi.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ms-demo
  name: vf-meetingapi
  labels:
    app: vf-meetingapi
    solution: vf-meeting-action
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    app: vf-meetingapi


---
apiVersion: v1
kind: Service
metadata:
  namespace: ms-demo
  name: vf-meetingapi-nodeport
  labels:
    app: vf-meetingapi
    solution: vf-meeting-action
spec:
  type: NodePort
  ports:
    - port: 8090
      nodePort: 30090
  selector:
    app: vf-meetingapi     

 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ms-demo
  name: vf-meetingapi
  labels:
    app: vf-meetingapi
    solution: vf-meeting-action  
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: vf-meetingapi  
  template:
    metadata:
      labels:
        app: vf-meetingapi
    spec:
      containers:
        - name: vf-meetingapi
          image: mycluster.icp:8500/ms-demo/meetingapi:0.1.0
          ports:
            - containerPort: 8090
      imagePullSecrets:
        - name: ms-demo-secret
