kubernetes-deployments/meetingApi-ingressRewrite.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ms-demo
  name: vf-meetingui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: meetingactions
    http:
      paths: 
        - path: /somepath/api
          backend:
            serviceName: vf-meetingapi
            servicePort: 8090
