kubernetes-deployments/meetingUi.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ms-demo
  name: vf-meetingui
  labels:
    app: vf-meetingui
    solution: vf-meeting-action
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: vf-meetingui


---
apiVersion: v1
kind: Service
metadata:
  namespace: ms-demo
  name: vf-meetingui-nodeport
  labels:
    app: vf-meetingui
    solution: vf-meeting-action
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
  selector:
    app: vf-meetingui     


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ms-demo
  name: vf-meetingui
spec:
  rules:
  - host: meetingactions
    http:
      paths:
      - backend:
          serviceName: vf-meetingui
          servicePort: 8080
           
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ms-demo
  name: vf-meetingui
  labels:
    app: vf-meetingui
    solution: vf-meeting-action  
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: vf-meetingui  
  template:
    metadata:
      labels:
        app: vf-meetingui
    spec:
      containers:
        - name: vf-meetingui
          image: mycluster.icp:8500/ms-demo/meetingui:0.1.0
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ms-demo-secret
