kubernetes-deployments/networkPolicy-restrict-mongo.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: ms-demo
  name: restrict-mongo
spec:
  podSelector:
    matchLabels:
      app: vf-mongo
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vf-meetingapi
